--- a/frontend/inventario/src/routes/Login/LoginPage.css
+++ b/frontend/inventario/src/routes/Login/LoginPage.css
@@ -18,7 +18,7 @@ body, html {
     background-color: #f5c858;
 }
 
-.divRegister {
+.divLogin {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,7 +27,7 @@ body, html {
     padding: 20px;
 }
 
-.mainRegister {
+.mainLogin {
     width: 80%;
     max-width: 900px;
     min-height: 400px;
@@ -50,7 +50,7 @@ body, html {
     flex-direction: column;
 }
 
-.registerTitle {
+.loginTitle {
     margin-bottom: 30px;
     text-align: center;
     font-size: 40px;
@@ -58,25 +58,25 @@ body, html {
     font-family: 'Winter Minie', cursive;
 }
 
-.formRegister {
+.formLogin {
     display: flex;
     flex-direction: column;
     width: 100%;
 }
 
-.divFormRegister {
+.divFormLogin {
     padding: 10px 0;
     display: flex;
     flex-direction: column;
 }
 
-.divFormRegister label{
+.divFormLogin label{
     padding-left: 5px;
     color: #00bcd9;
     font-family: 'Winter Minie', cursive;
 }
 
-.formRegister input {
+.formLogin input {
     width: 100%;
     border-radius: 20px;
     padding: 10px 15px;
@@ -85,7 +85,7 @@ body, html {
     margin-top: 5px;
 }
 
-.formRegister button {
+.formLogin button {
     margin-top: 20px;
     border-radius: 10px;
     padding: 10px;
@@ -101,7 +101,7 @@ body, html {
     font-family: 'Winter Minie', cursive;
 }
 
-.formRegister button:hover {
+.formLogin button:hover {
     background-color: #0192a8;
 }
 
@@ -145,24 +145,24 @@ body, html {
     margin-left: 10px;
 }
 
-.loginLink{
+.registerLink{
     text-align: center;
     margin-top: 15px;
     font-size: 14px;
     color: #00bcd9;
 }
 
-.loginLink a{
+.registerLink a{
     color: #f5c858;
     text-decoration: none;
     font-weight: bold;
 }
 
-.loginLink a:hover{
+.registerLink a:hover{
     text-decoration: underline;
 }
 
-.formRegister button[type="submit"]{
+.formLogin button[type="submit"]{
     margin-top: 20px;
     width: 100%;
 }
