--- a/frontend/inventario/src/routes/Register/RegisterPage.css
+++ b/frontend/inventario/src/routes/Register/RegisterPage.css
@@ -150,6 +150,7 @@ body, html {
     margin-top: 15px;
     font-size: 14px;
     color: #00bcd9;
+    font-family: 'Winter Minie', cursive;
 }
 
 .loginLink a{
