--- a/frontend/inventario/src/routes/Login/LoginPage.css
+++ b/frontend/inventario/src/routes/Login/LoginPage.css
@@ -1,27 +1,21 @@
-@font-face {
-    font-family: 'Winter Minie';
-    src: url('../../../public/fonts/Winter\ Minie.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-  }
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Roboto";
 }
 
 body, html {
     height: 100%;
     width: 100%;
-    background-color: #f5c858;
 }
 
 .divLogin {
+    background-color: #f5c858;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     min-height: 100vh;
     width: 100%;
     padding: 20px;
@@ -55,7 +49,6 @@ body, html {
     text-align: center;
     font-size: 40px;
     color: #00bcd9;
-    font-family: 'Winter Minie', cursive;
 }
 
 .formLogin {
@@ -65,6 +58,7 @@ body, html {
 }
 
 .divFormLogin {
+    position: relative;
     padding: 10px 0;
     display: flex;
     flex-direction: column;
@@ -73,7 +67,6 @@ body, html {
 .divFormLogin label{
     padding-left: 5px;
     color: #00bcd9;
-    font-family: 'Winter Minie', cursive;
 }
 
 .formLogin input {
@@ -98,7 +91,6 @@ body, html {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    font-family: 'Winter Minie', cursive;
 }
 
 .formLogin button:hover {
@@ -150,11 +142,10 @@ body, html {
     margin-top: 15px;
     font-size: 14px;
     color: #00bcd9;
-    font-family: 'Winter Minie', cursive;
 }
 
 .registerLink a{
-    color: #f5c858;
+    color: rgb(49, 49, 49);
     text-decoration: none;
     font-weight: bold;
 }
@@ -166,4 +157,14 @@ body, html {
 .formLogin button[type="submit"]{
     margin-top: 20px;
     width: 100%;
+}
+
+.notificationContainer{
+    position:absolute;
+    top:50px
+}
+
+.mantine-Notification-root{
+    width: 300px;
+    text-align: center;
 }
