--- a/frontend/inventario/src/routes/Register/RegisterPage.css
+++ b/frontend/inventario/src/routes/Register/RegisterPage.css
@@ -147,7 +147,7 @@ body, html {
 .loginLink a{
     color: rgb(49, 49, 49);
     text-decoration: underline;
-    font-weight: lighter;
+    font-weight: bold;
 }
 
 .loginLink a:hover{
