--- a/frontend/inventario/src/routes/Suppliers/Suppliers.css
+++ b/frontend/inventario/src/routes/Suppliers/Suppliers.css
@@ -14,7 +14,7 @@ html {
 .divSuppliers {
   background-color: #f5c858;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   min-height: 100vh;
