--- a/frontend/inventario/src/routes/Home/HomePage.css
+++ b/frontend/inventario/src/routes/Home/HomePage.css
@@ -76,6 +76,7 @@ html {
   padding: 15px 30px;
   border-top: 1px solid #eee;
   color: #00bcd9;
+  align-items: center;
 }
 
 .productCard p {
@@ -148,4 +149,20 @@ html {
 .drawerLink:hover {
   background-size: 100% 100%;
   color: #00bcd9;
+}
+
+.productActionButton{
+  padding: 0 7px;
+  margin: 0 5px;
+  border: 2px solid #00bcd9;
+  border-radius: 5px;
+  color: #00bcd9;
+  background-color: white;
+  align-items: center;
+}
+
+.productActionButton:hover{
+  color: white;
+  background-color: #00bcd9;
+  cursor: pointer;
 }
