--- a/frontend/inventario/src/routes/Events/Events.css
+++ b/frontend/inventario/src/routes/Events/Events.css
@@ -12,60 +12,52 @@ html {
 }
 
 .divEvents {
-    background-color: #f5c858;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: row;
-    min-height: 100vh;
-    width: 100%;
-    padding: 20px;
+  background-color: #f5c858;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  width: 100%;
+  padding: 20px;
 }
 
 .eventsHeader {
   width: 100%;
-  position: relative;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
   padding: 10px 20px;
   margin-bottom: 20px;
+  position: relative;
 }
 
 .eventsTitle {
   color: #00bcd9;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
   font-size: 30px;
+  margin: 0 auto;
+}
+
+.eventsContainer {
+  width: 80%;
+  max-width: 900px;
+  display: flex;
+  flex-direction: column;
 }
 
 .eventListTitles {
-  width: 80%;
-  max-width: 900px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   background-color: white;
   padding: 15px 30px;
-  margin-bottom: -1px;
   border-radius: 15px 15px 0 0;
   box-shadow: 0px 0px 60px 10px rgba(255, 255, 255, 0.3);
   color: #00bcd9;
 }
 
-.eventListTitles h3 {
-  text-align: center;
-  padding: 10px;
-  font-size: 0.9rem;
-}
-
 .eventsList {
-  width: 80%;
-  max-width: 900px;
+  width: 100%;
   box-shadow: 0px 0px 60px 10px rgba(255, 255, 255, 0.3);
   border-radius: 0 0 15px 15px;
-  padding: 0;
-  margin: 0 auto 20px;
   background-color: white;
 }
 
