--- a/frontend/inventario/src/routes/Suppliers/Suppliers.css
+++ b/frontend/inventario/src/routes/Suppliers/Suppliers.css
@@ -14,7 +14,6 @@ html {
 .divSuppliers {
   background-color: #f5c858;
   display: flex;
-  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   min-height: 100vh;
@@ -24,48 +23,41 @@ html {
 
 .suppliersHeader {
   width: 100%;
-  position: relative;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
   padding: 10px 20px;
   margin-bottom: 20px;
+  position: relative;
 }
 
 .suppliersTitle {
-  color: #00bcd9;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  color: #eee;
   font-size: 30px;
+  margin: 0 auto;;
+}
+
+.suppliersContainer{
+  width: 80%;
+  max-width: 900px;
+  display: flex;
+  flex-direction: column;
 }
 
 .suppliersListTitles {
-  width: 80%;
-  max-width: 900px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   background-color: white;
   padding: 15px 30px;
-  margin-bottom: -1px;
   border-radius: 15px 15px 0 0;
   box-shadow: 0px 0px 60px 10px rgba(255, 255, 255, 0.3);
   color: #00bcd9;
 }
 
-.suppliersListTitles h3 {
-  text-align: center;
-  padding: 10px;
-  font-size: 0.9rem;
-}
-
 .suppliersList {
-  width: 80%;
-  max-width: 900px;
+  width: 100%;
   box-shadow: 0px 0px 60px 10px rgba(255, 255, 255, 0.3);
   border-radius: 0 0 15px 15px;
-  padding: 0;
-  margin: 0 auto 20px;
   background-color: white;
 }
 
@@ -125,4 +117,20 @@ html {
   color: white;
   background-color: #00bcd9;
   cursor: pointer;
+}
+
+.addSupplier{
+  color: #eee;
+  border: 2px solid #eee;
+  background-color: #f5c858;
+  padding: 0 10px;
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.addSupplier:hover{
+  background-color: #eee;
+  color: #f5c858;
+  border: 2px solid #f5c858;
 }
