--- a/frontend/inventario/src/pages/HomePage/ProductPage.css
+++ b/frontend/inventario/src/pages/HomePage/ProductPage.css
@@ -7,89 +7,90 @@
 
 body,
 html {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
-.divHome {
+.productPage {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.productsTitle {
+  display: flex;
+  gap: 1rem;
+}
+
+.productsTitle h2{
+  color: #00bcd9;
+}
+
+.addProduct{
+  border: 1px solid #f5c858;
+  border-radius: 5px;
+  padding: 3px 10px;
+  color: #f5c858;
+  background-color: white;
+}
+
+.addProduct:hover{
+  border: 1px solid white;
   background-color: #f5c858;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  min-height: 100vh;
-  width: 100%;
-  padding: 20px;
+  color: white;
+  cursor: pointer;
 }
 
-.header {
+.productsContainer {
   width: 100%;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-  margin-bottom: 20px;
-  position: relative;
-}
-
-.homeTitle {
-  color: #eee;
-  font-size: 30px;
-  margin: 0 auto;
-}
-
-.productsContainer{
-  width: 80%;
-  max-width: 900px;
-  display: flex;
   flex-direction: column;
+  border: 2px solid #f5c858;
+  border-radius: 10px;
 }
 
 .listTitles {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  background-color: white;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
   padding: 15px 30px;
-  border-radius: 15px 15px 0 0;
-  box-shadow: 0px 0px 60px 10px rgba(255, 255, 255, 0.3);
+  border-radius: 15px;
   color: #00bcd9;
+}
+
+.listTitles h3{
+  text-align: center;
+  width: 150px;
 }
 
 .productsList {
   width: 100%;
-  box-shadow: 0px 0px 60px 10px rgba(255, 255, 255, 0.3);
   border-radius: 0 0 15px 15px;
   background-color: white;
 }
 
 .productCard {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
   padding: 15px 30px;
   border-top: 1px solid #eee;
   color: #00bcd9;
 }
 
 .productCard p {
+  width: 150px;
   text-align: center;
   padding: 10px;
   margin: 0;
   font-size: 0.9rem;
-}
-
-.productCard p:nth-child(1),
-.listTitles h3:nth-child(1) {
-  text-align: left;
-  min-width: 150px;
-}
-
-.productCard p:nth-child(6),
-.listTitles h3:nth-child(6),
-.productCard p:nth-child(7),
-.listTitles h3:nth-child(7),
-.productCard p:nth-child(8),
-.listTitles h3:nth-child(8) {
-  min-width: 120px;
 }
 
 .truncatedText {
@@ -142,7 +143,7 @@ html {
   color: #00bcd9;
 }
 
-.productActionButton{
+.productActionButton {
   padding: 0 7px;
   margin: 0 5px;
   border: 2px solid #00bcd9;
@@ -152,24 +153,8 @@ html {
   align-items: center;
 }
 
-.productActionButton:hover{
+.productActionButton:hover {
   color: white;
   background-color: #00bcd9;
   cursor: pointer;
-}
-
-.addProduct{
-  color: #eee;
-  border: 2px solid #eee;
-  background-color: #f5c858;
-  padding: 0 10px;
-  border-radius: 10px;
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.addProduct:hover{
-  background-color: #eee;
-  color: #f5c858;
-  border: 2px solid #f5c858;
 }
