--- a/frontend/inventario/src/pages/AddProduct.css
+++ b/frontend/inventario/src/pages/AddProduct.css
@@ -2,8 +2,15 @@
   max-width: 600px;
   margin: 20px auto;
   padding: 20px;
-  background: #f9f9f9;
+  background: #ffffff;
+  border: 2px solid #f5c858;
   border-radius: 8px;
+  color: #00bcd9;
+}
+
+.addForm h2{
+  padding-bottom: 15px;
+  text-align: center;
 }
 
 .formGroup {
@@ -21,6 +28,22 @@
 .formGroup textarea {
   width: 100%;
   padding: 8px;
-  border: 1px solid #ddd;
+  border: 1px solid #00bcd9;
   border-radius: 4px;
+  color: #00bcd9;
+}
+
+.addProductButton{
+  padding: 3px 5px;
+  background-color: #ffffff;
+  color: #f5c858;
+  border: 2px solid #f5c858;
+  border-radius: 5px;
+}
+
+.addProductButton:hover{
+  background-color: #f5c858;
+  border: 2px solid #ffffff;
+  color: #ffffff;
+  cursor: pointer;
 }
