--- a/frontend/inventario/src/pages/Suppliers/Suppliers.css
+++ b/frontend/inventario/src/pages/Suppliers/Suppliers.css
@@ -7,80 +7,120 @@
 
 body,
 html {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
-.divSuppliers {
-  background-color: #f5c858;
+.suppliersPage {
+  padding: 2rem;
   display: flex;
-  align-items: center;
   flex-direction: column;
-  min-height: 100vh;
-  width: 100%;
-  padding: 20px;
-}
-
-.suppliersHeader {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-  margin-bottom: 20px;
-  position: relative;
+  gap: 1rem;
 }
 
 .suppliersTitle {
-  color: #eee;
-  font-size: 30px;
-  margin: 0 auto;;
+  display: flex;
+  gap: 1rem;
 }
 
-.suppliersContainer{
-  width: 80%;
-  max-width: 900px;
+.suppliersTitle h2{
+  color: #00bcd9;
+}
+
+.addSupplier{
+  border: 1px solid #f5c858;
+  border-radius: 5px;
+  padding: 3px 10px;
+  color: #f5c858;
+  background-color: white;
+}
+
+.addSupplier:hover{
+  border: 1px solid white;
+  background-color: #f5c858;
+  color: white;
+  cursor: pointer;
+}
+
+.suppliersContainer {
+  width: 100%;
   display: flex;
   flex-direction: column;
+  border: 2px solid #f5c858;
+  border-radius: 10px;
 }
 
-.suppliersListTitles {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  background-color: white;
+.listTitles {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
   padding: 15px 30px;
-  border-radius: 15px 15px 0 0;
-  box-shadow: 0px 0px 60px 10px rgba(255, 255, 255, 0.3);
+  border-radius: 15px;
   color: #00bcd9;
+}
+
+.listTitles h3{
+  text-align: center;
+  width: 150px;
 }
 
 .suppliersList {
   width: 100%;
-  box-shadow: 0px 0px 60px 10px rgba(255, 255, 255, 0.3);
   border-radius: 0 0 15px 15px;
   background-color: white;
 }
 
 .supplierCard {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
   padding: 15px 30px;
   border-top: 1px solid #eee;
   color: #00bcd9;
 }
 
 .supplierCard p {
+  width: 150px;
   text-align: center;
   padding: 10px;
   margin: 0;
   font-size: 0.9rem;
 }
 
-.supplierCard p:nth-child(1),
-.suppliersListTitles h3:nth-child(1) {
-  text-align: left;
-  min-width: 150px;
+.truncatedText {
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 80px;
+  vertical-align: middle;
+}
+
+[title] {
+  position: relative;
+}
+
+[title]:hover::after {
+  content: attr(title);
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #333;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 4px;
+  font-size: 14px;
+  white-space: normal;
+  width: max-content;
+  max-width: 300px;
+  z-index: 10;
 }
 
 .drawerLink {
@@ -103,7 +143,7 @@ html {
   color: #00bcd9;
 }
 
-.supplierActionButton{
+.supplierActionButton {
   padding: 0 7px;
   margin: 0 5px;
   border: 2px solid #00bcd9;
@@ -113,24 +153,12 @@ html {
   align-items: center;
 }
 
-.supplierActionButton:hover{
+.supplierActionButton:hover {
   color: white;
   background-color: #00bcd9;
   cursor: pointer;
 }
 
-.addSupplier{
-  color: #eee;
-  border: 2px solid #eee;
-  background-color: #f5c858;
-  padding: 0 10px;
-  border-radius: 10px;
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.addSupplier:hover{
-  background-color: #eee;
-  color: #f5c858;
-  border: 2px solid #f5c858;
+.noSuppliers{
+  color: #00bcd9;
 }
