--- a/frontend/inventario/src/pages/Events/Events.css
+++ b/frontend/inventario/src/pages/Events/Events.css
@@ -7,80 +7,90 @@
 
 body,
 html {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
-.divEvents {
-  background-color: #f5c858;
+.eventPage {
+  padding: 2rem;
   display: flex;
-  align-items: center;
   flex-direction: column;
-  min-height: 100vh;
-  width: 100%;
-  padding: 20px;
-}
-
-.eventsHeader {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-  margin-bottom: 20px;
-  position: relative;
+  gap: 1rem;
 }
 
 .eventsTitle {
-  color: #eee;
-  font-size: 30px;
-  margin: 0 auto;
+  display: flex;
+  gap: 1rem;
+}
+
+.eventsTitle h2{
+  color: #00bcd9;
+}
+
+.addEvents{
+  border: 1px solid #f5c858;
+  border-radius: 5px;
+  padding: 3px 10px;
+  color: #f5c858;
+  background-color: white;
+}
+
+.addEvents:hover{
+  border: 1px solid white;
+  background-color: #f5c858;
+  color: white;
+  cursor: pointer;
 }
 
 .eventsContainer {
-  width: 80%;
-  max-width: 900px;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  border: 2px solid #f5c858;
+  border-radius: 10px;
 }
 
-.eventListTitles {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  background-color: white;
+.listTitles {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
   padding: 15px 30px;
-  border-radius: 15px 15px 0 0;
-  box-shadow: 0px 0px 60px 10px rgba(255, 255, 255, 0.3);
+  border-radius: 15px;
   color: #00bcd9;
+}
+
+.listTitles h3{
+  text-align: center;
+  width: 150px;
 }
 
 .eventsList {
   width: 100%;
-  box-shadow: 0px 0px 60px 10px rgba(255, 255, 255, 0.3);
   border-radius: 0 0 15px 15px;
   background-color: white;
 }
 
 .eventCard {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
   padding: 15px 30px;
   border-top: 1px solid #eee;
   color: #00bcd9;
 }
 
 .eventCard p {
+  width: 150px;
   text-align: center;
   padding: 10px;
   margin: 0;
   font-size: 0.9rem;
-}
-
-.eventCard p:nth-child(1),
-.eventListTitles h3:nth-child(1) {
-  text-align: left;
-  min-width: 150px;
 }
 
 .truncatedText {
@@ -149,18 +159,6 @@ html {
   cursor: pointer;
 }
 
-.addEvent{
-  color: #eee;
-  border: 2px solid #eee;
-  background-color: #f5c858;
-  padding: 0 10px;
-  border-radius: 10px;
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.addEvent:hover{
-  background-color: #eee;
-  color: #f5c858;
-  border: 2px solid #f5c858;
+.noEvents{
+  color: #00bcd9;
 }
