Creado form add sale

--- a/frontend/inventario/src/pages/Sales/AddSale.css
+++ b/frontend/inventario/src/pages/Sales/AddSale.css
@@ -33,6 +33,10 @@
   color: #00bcd9;
 }
 
+.selectProducts{
+  color: #00bcd9;
+}
+
 .addSaleButton{
   padding: 3px 5px;
   background-color: #ffffff;
