--- a/frontend/inventario/src/pages/Sales/Sales.css
+++ b/frontend/inventario/src/pages/Sales/Sales.css
@@ -142,3 +142,10 @@ html {
 .noSales {
   color: #00bcd9;
 }
+
+.products{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
