--- a/frontend/inventario/src/pages/Events/Calendar.css
+++ b/frontend/inventario/src/pages/Events/Calendar.css
@@ -1,6 +1,5 @@
 .contenedorCalendario{
   height: 100vh;
-  background-color: aqua;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -10,7 +9,44 @@
 .react-calendar{
   border: 2px solid #f5c858 !important;
   border-radius: 10px;
+  max-width: 0%;
+  width: 80% !important;
+  height: auto;
+  margin-bottom: 200px !important;
 }
+
+.react-calendar__tile {
+  height: 100px;
+  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.react-calendar__month-view__weekdays__weekday {
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 5px 0;
+  margin: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+
+.react-calendar__navigation {
+  height: 60px;
+  font-size: 1.5rem;
+}
+
+.react-calendar__navigation button {
+  font-size: 1.5rem;
+}
+
+.react-calendar__month-view {
+  padding: 10px;
+  overflow: hidden;
+}
+
 
 .highlight {
   height: 40px;
@@ -28,3 +64,19 @@
 .react-calendar__month-view__days{
   color: #f5c858;
 }
+
+.react-calendar__tile {
+  position: relative;
+}
+
+.react-calendar__tile .highlight-dot {
+  position: absolute;
+  top: 6px;
+  right: 6px;
+  width: 8px;
+  height: 8px;
+  background-color: #00bcd9;
+  border-radius: 50%;
+  pointer-events: none;
+}
+
