--- a/frontend/inventario/src/pages/Header.css
+++ b/frontend/inventario/src/pages/Header.css
@@ -34,6 +34,7 @@ h1 {
 .drawerLink:hover {
   background-size: 100% 100%;
   color: #00bcd9;
+  cursor: pointer;
 }
 
 .drawerLinkLanguages {
@@ -57,6 +58,7 @@ h1 {
 .drawerLinkLanguages:hover {
   background-size: 100% 100%;
   color: #00bcd9;
+  cursor: pointer;
 }
 
 .languageOptions {
