--- a/frontend/inventario/src/pages/Sales/AddSale.css
+++ b/frontend/inventario/src/pages/Sales/AddSale.css
@@ -1,3 +1,11 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-y: auto; /* Asegura que haya scroll vertical si se necesita */
+}
+
 .addForm {
   max-width: 600px;
   margin: 20px auto;
@@ -8,7 +16,7 @@
   color: #00bcd9;
 }
 
-.addForm h2{
+.addForm h2 {
   padding-bottom: 15px;
   text-align: center;
 }
@@ -33,11 +41,11 @@
   color: #00bcd9;
 }
 
-.selectProducts{
+.selectProducts {
   color: #00bcd9;
 }
 
-.addSaleButton{
+.addSaleButton {
   padding: 3px 5px;
   background-color: #ffffff;
   color: #f5c858;
@@ -45,14 +53,14 @@
   border-radius: 5px;
 }
 
-.addSaleButton:hover{
+.addSaleButton:hover {
   background-color: #f5c858;
   border: 2px solid #ffffff;
   color: #ffffff;
   cursor: pointer;
 }
 
-.selectProducts{
+.selectProducts {
   border: 1px solid #00bcd9;
   border-radius: 5px;
   color: #00bcd9;
