--- a/frontend/inventario/src/pages/Events/Calendar.css
+++ b/frontend/inventario/src/pages/Events/Calendar.css
@@ -17,10 +17,12 @@
 
 .react-calendar__tile {
   height: 100px;
-  font-size: 1.5rem;
+  width: 50px !important;
+  font-size: 1.2rem !important;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 200px;
 }
 
 .react-calendar__month-view__weekdays__weekday {
