--- a/frontend/inventario/src/pages/Events/Calendar.css
+++ b/frontend/inventario/src/pages/Events/Calendar.css
@@ -9,7 +9,7 @@
 .react-calendar{
   border: 2px solid #f5c858 !important;
   border-radius: 10px;
-  max-width: 0%;
+  /* max-width: 0%; */
   width: 80% !important;
   height: auto;
   margin-bottom: 200px !important;
@@ -23,6 +23,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 200px;
+  position: relative;
 }
 
 .react-calendar__month-view__weekdays__weekday {
@@ -49,15 +50,6 @@
   overflow: hidden;
 }
 
-
-.highlight {
-  height: 40px;
-  width: 40px;
-  background: #00bcd9 !important;
-  color: white !important;
-  border-radius: 50%;
-}
-
 .react-calendar__month-view__weekdays{
   color: #00bcd9;
   text-decoration: none;
@@ -67,18 +59,15 @@
   color: #f5c858;
 }
 
-.react-calendar__tile {
-  position: relative;
-}
-
 .react-calendar__tile .highlight-dot {
   position: absolute;
   top: 6px;
-  right: 6px;
+  left:75%;
+  transform: translateX(-50%);
   width: 8px;
   height: 8px;
   background-color: #00bcd9;
   border-radius: 50%;
-  pointer-events: none;
 }
+
 
